﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
- v2.5.1:
~~~~~~~~~

- KGySoft.Drawing.DebuggerVisualizers.dll
=========================================
- Debugging a Graphics instance did not always work from a .NET [Core] project.
- Fixing possible AcessViolationException when replacing a small debugged image to a huge one and debugging the
  replaced huge image again. In such case the VisualStudio debugger may dispose large objects even in the middle
  of a serialization session to prevent running out of memory. It also rendered the debugged object invalid.
- Fixing possible OutOfMemoryException from the debugger domain when a large debugged image has been replaced to
  a modified but unsaved image, in which case huge memory streams were transferred between application domains.
  From now on the debugger visualizer uses temp files if its domain has write access to the system TEMP folder.


~~~~~~~~~
* v2.5.0:
~~~~~~~~~

* KGySoft.Drawing.ImagingTools.exe
==================================
* Language Settings
  + An absolute path can be set for the resources.
- .NET 5 build: Opening URLs from the help menu didn't work due to a breaking change introduced in .NET Core 3.1.

* API changes:
  * ViewModelFactory class: CreateEditResources has an optional hasPendingChanges parameter that allows applying
    changes without any editing.

+ KGySoft.Drawing.DebuggerVisualizers.Package.x64.dll
=====================================================
+ This is a new installer for the 64-bit Visual Studio 2022


~~~~~~~~~
* v2.4.0:
~~~~~~~~~

* KGySoft.Drawing.ImagingTools.exe
==================================
+ Targeting also .NET 5.0
+ Now panning a zoomed image is possible also by clicking and dragging with the mouse (besides usual scrolling).
+ Zooming is now possible also with keyboard shortcuts, the Auto Zoom button has now a drop-down part for the